WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
256840
Assertion failure in StyleGeneratedImage::removeClient
https://bugs.webkit.org/show_bug.cgi?id=256840
Summary
Assertion failure in StyleGeneratedImage::removeClient
Antti Koivisto
Reported
2023-05-16 07:25:19 PDT
Caused by custom property deduplication code.
Attachments
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2023-05-16 07:25:32 PDT
rdar://107311467
Antti Koivisto
Comment 2
2023-05-16 07:41:01 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/13921
EWS
Comment 3
2023-05-16 08:32:45 PDT
Committed
264116@main
(1a09d8d95ba6): <
https://commits.webkit.org/264116@main
> Reviewed commits have been landed. Closing PR #13921 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug